# K-Optimizers

./: .gitignore  CHANGELOG.md  LICENSE  NOTICE  README.md  pyproject.toml
benchmarks/: README.md  auto_lr_battery.py  bench_kprodigy_d.py
benchmarks/adamuon/: README.md  RESULTS_generalization_and_schedule.md  RESULTS_vs_adamw_adafactor.md  RESULTS_warmup_and_batch.md  pixel_ddpm_ab.py  proxy_dataset.py  sdxl_lora_ab.py
benchmarks/control/: EXPLORE.md  PERCEPTUAL.md  RANKINGS.md  RESULTS_candidates_v2.md  battery.py  explore.py  explore_results.json  fused_adakaon.py  fused_adakaon_v2.py  fused_poc.py  fused_quant_poc.py  perceptual_eval.py  perceptual_results.json  plot_rankings.py  profiler.py  registry.py  results.json  results_archive.json  triton_full_poc.py  triton_poc.py
benchmarks/control/profiles/: AdaPNM.md
benchmarks/fused/: bench_fused.py
benchmarks/proxy/: __init__.py  harness.py
docs/: EXPERIMENTS_GRAVEYARD.md  FUSED_REDUCTIONS_DESIGN.md  adafusion.md  adakaon.md  adamuon.md  adapnm.md  autofusion.md  autokaon.md  autolr.md  foreach-batching.md  kprodigy.md  liofusion.md  lion.md  momentum.md  muon.md  nekaon.md  recipes.md
docs/research/: README.md  const-lr-optimizer-sweep.json  generalization-techniques-findings.md  optimizer-candidates-catalog.md  optimizer-research-charter.md
src/kaon/: __init__.py  _autolr.py  _backend.py  _fused_triton.py  _mechanic.py  _momentum_codec.py  _stochastic_rounding.py  _version.py  _wrappers.py  adabelief.py  adafusion.py  adai.py  adakaon.py  adamp.py  adamuon.py  adan.py  adapnm.py  ademamix.py  adopt.py  autofusion.py  autokaon.py  grams.py  kprodigy.py  lion.py  lookahead.py  mars.py  msam.py  muon.py  nekaon.py  sam.py  schedulefree.py  tune.py
src/koptim/: __init__.py  _compiled.py  _factored.py  _momentum_codec.py  _stochastic_rounding.py  adafusion.py  adafusionex.py  adamuon.py  adaptive_adafusion.py  autofusion.py  gemini.py  janus.py  kprodigy.py  liofusion.py  muon.py  orphan.py  tune.py
tests/: conftest.py  test_adabelief.py  test_adafusion.py  test_adafusionex.py  test_adai.py  test_adakaon.py  test_adamp.py  test_adamuon.py  test_adan.py  test_adapnm.py  test_adapnm_fused.py  test_adaptive_adafusion.py  test_ademamix.py  test_adopt.py  test_auto_lr.py  test_autofusion.py  test_autokaon.py  test_fused_triton.py  test_gemini.py  test_grams.py  test_janus.py  test_kprodigy.py  test_liofusion.py  test_lion.py  test_lookahead.py  test_mars.py  test_momentum_codec.py  test_msam.py  test_muon.py  test_nekaon.py  test_orphan.py  test_proxy_dataset.py  test_sam.py  test_schedulefree.py  test_wrappers.py
